Renommage de la clé API et refactorisation des modèles
Modifications apportées pour renommer `OpenAIKey` en `APIKey` dans l'ensemble de l'application, avec des mises à jour des fichiers de configuration et des ressources localisées. La classe `GPTModel` a été supprimée et remplacée par `ChatModel` pour gérer les modèles de chat d'OpenAI et d'Anthropic. Les méthodes de l'`OpenAIClient` ont été adaptées pour utiliser la nouvelle interface `IAIProviderService`. Les liaisons de données dans l'interface utilisateur ont également été mises à jour pour refléter ces changements.

--- a/Resources/Strings.fr.resx
+++ b/Resources/Strings.fr.resx
@@ -136,7 +136,7 @@
     <value>Modificateurs</value>
   </data>
   <data name="Lbl_APIKey" xml:space="preserve">
-    <value>Clé API OpenAI</value>
+    <value>Clé API</value>
   </data>
   <data name="Lbl_Model" xml:space="preserve">
     <value>Modèle</value>
@@ -148,7 +148,7 @@
     <value>Trop de modificateurs sélectionnés. Veuillez en choisir 3 ou moins.</value>
   </data>
   <data name="Chk_AutoSend" xml:space="preserve">
-    <value>Envoi automatique d'un prompt à GPT</value>
+    <value>Envoi automatique d'un prompt à l'IA</value>
   </data>
   <data name="Msg_HotkeyTitle" xml:space="preserve">
     <value>Touche de raccourci invalide</value>
